--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
   "homepage": "https://github.com/BurnerB/FreeMentors-V2#readme",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@hapi/joi": "^15.1.1",
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^1.19.1"
   },
   "devDependencies": {
