--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": " nodemon --exec babel-node app.js",
     "deploy": "./node_modules/.bin/babel-node app.js",
-    "test": "nyc mocha --require @babel/register ./server/tests/*.js",
+    "test": "nyc mocha --require @babel/register ./server/tests/*.js --timeout 150000 --exit",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls ",
     "build": "babel server -d build"
   },
