--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "nodemon": "^1.19.1"
   },
   "devDependencies": {
