--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@hapi/joi": "^15.1.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "swagger-ui": "^3.23.6",
+    "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
