--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "deploy": "./node_modules/.bin/babel-node app.js",
     "test": "nyc mocha --require @babel/register ./server/tests/*.js --exit",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls ",
-    "build": "babel server -d build"
+    "build": "babel server -d build",
+    "lint":"npx eslint"
   },
   "engines": {
     "node": "10.16.3",
