--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": " nodemon --exec babel-node app.js",
     "deploy": "./node_modules/.bin/babel-node app.js",
-    "test": "nyc mocha --require @babel/register ./server/tests/*.js --exit",
+    "test": "NODE_ENV=test nyc mocha --require @babel/register ./server/tests/*.js --exit",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls ",
     "build": "babel server -d build",
-    "lint":"npx eslint"
+    "lint": "npx eslint"
   },
   "engines": {
     "node": "10.16.3",
@@ -37,6 +37,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "nodemon": "^1.19.1",
+    "pg": "^7.12.1",
     "swagger-ui": "^3.23.6",
     "swagger-ui-express": "^4.0.7"
   },
