--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ services:
  - postgresql
 
 before_install:
- - psql -c 'create database FreeMentors' -U postgres
+ - psql -c 'create database FreeMentorsTest' -U postgres
+ - psql -c 'create USER postgres WITH PASSWORD 'ibombe' -U postgres
 script:
   - npm test
 after_success:
