--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
-language:      node_js
-git:
-  depth:       3
+services:
+ - postgresql
+
+ language:      node_js
+
 node_js:
   - "10"
 install:       npm install
@@ -10,12 +12,10 @@ cache:
 addons:
  postgresql: "9.6"
 
-services:
- - postgresql
 
 before_install:
- - psql -c 'create database FreeMentorsTest' -U postgres
- - psql -c 'create USER postgres WITH PASSWORD 'ibombe';' -U postgres
+ - psql -c 'create database FreeMentorsTest;' -U postgres
+
 script:
   - npm test
 after_success:
