--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
-services:
- - postgresql
-
- language:      node_js
-
+language:      node_js
+git:
+  depth:       3
 node_js:
   - "10"
 install:       npm install
@@ -11,8 +9,13 @@ cache:
     - node_modules
 addons:
  postgresql: "9.6"
+
+services:
+ - postgresql
+
 before_install:
- - psql -c 'create database FreeMentorsTest;' -U postgres
+ - psql -c 'create database FreeMentorsTest' -U postgres
+ - psql -c 'create USER postgres WITH PASSWORD 'ibombe';' -U postgres
 script:
   - npm test
 after_success:
