--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ services:
  - postgresql
 
 before_install:
- - psql -c 'create database FreeMentorsTest' -U postgres
- - psql -c 'create USER postgres WITH PASSWORD 'ibombe';' -U postgres
+ - psql -c 'create database FreeMentorsTest;' -U postgres
 script:
   - npm test
 after_success:
