--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ services:
  - postgresql
 
 before_install:
- - psql -c 'create database FreeMentorsTest' -U postgres
+ - psql -c 'CREATE DATABASE FreeMentorsTest' -U postgres
 script:
   - npm test
 after_success:
