bg(travis):Configure .travis.yml[#168368190]

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ addons:
 services:
  - postgresql
 
-before_install:
+before_script:
  - psql -c 'CREATE DATABASE FreeMentorsTest' -U postgres
 script:
   - npm test
