bg(travis):Configure .travis.yml[#168368190]

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
   - npm test
 after_success:
 - psql -c'	
-DROP DATABASE target_database;' -U postgres
+- DROP DATABASE target_database;' -U postgres
 - npm run coveralls
 notifications:
 email: false
