--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,11 @@ services:
  - postgresql
 
 before_script:
- - psql -c 'CREATE DATABASE FreeMentorsTest' -U postgres
+ - psql -c 'CREATE DATABASE FreeMentorsTest;' -U postgres
 script:
   - npm test
 after_success:
 - psql -c'	
-- DROP DATABASE target_database;' -U postgres
 - npm run coveralls
 notifications:
 email: false
