--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ addons:
 services:
  - postgresql
 before_script:
- - psql -c 'CREATE DATABASE FreeMentorsTest;' -U postgres
+ - psql -c 'CREATE DATABASE testDatabase;' -U postgres
 script:
   - npm test
 after_success:
