--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,29 @@
 language: node_js
+
 git:
   depth: 3
+
 node_js:
   - "10"
+
 install: npm install
+
 cache:
   directories:
     - node_modules
+
 addons:
  postgresql: "9.6"
+
 services:
  - postgresql
+
 before_script:
- - psql -c 'CREATE DATABASE testDatabase;' -U postgres
- - psql -c 'CREATE USER postgres WITH PASSWORD 'ibombe';' -U postgres
+ - psql -c 'create database testDatabase;' -U postgres
+ - psql -c 'create user postgres with password 'ibombe';' -U postgres
+
 script:
   - npm test
+  
 after_success:
 - npm run coveralls
-notifications:
-email: false
