--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": " nodemon --exec babel-node app.js",
     "deploy": "./node_modules/.bin/babel-node app.js",
-    "test": "NODE_ENV=test nyc mocha --require @babel/register ./server/tests/*.js --exit",
+    "test": "cross-env NODE_ENV=test nyc mocha --require @babel/register ./server/tests/*.js --exit",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls ",
     "build": "babel server -d build",
     "lint": "npx eslint"
@@ -32,6 +32,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cross-env": "^5.2.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
