--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,16 @@
 language: node_js
 
-git:
-  depth: 3
-
 node_js:
-  - "10"
+  - node
 
 install: npm install
-
-cache:
-  directories:
-    - node_modules
-
-addons:
- postgresql: "9.6"
 
 services:
  - postgresql
 
 before_script:
- - psql -c 'create database testDatabase;' -U postgres
- - psql -c 'create user postgres with password 'ibombe';' -U postgres
+ - psql -c "CREATE DATABASE testDatabase;"" -U postgres
+ - psql -c 'CREATE USER postgres WITH PASSWORD 'ibombe';' -U postgres
 
 script:
   - npm test
