--- a/package.json
+++ b/package.json
@@ -55,6 +55,6 @@
     "mocha": "^6.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^14.1.1",
-    "cross-env": "^5.2.1",
+    "cross-env": "^5.2.1"
   }
 }
