bg(travis):Configure .travis.yml[#168368190]

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ services:
  - postgresql
 
 before_script:
- - psql -c "CREATE DATABASE testDatabase;"" -U postgres
- - psql -c 'CREATE USER postgres WITH PASSWORD 'ibombe';' -U postgres
+ - psql -c "CREATE DATABASE testDatabase;" -U postgres
+ - psql -c "CREATE USER postgres WITH PASSWORD 'ibombe';" -U postgres
 
 script:
   - npm test
