--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 
 node_js:
   - node
+cache:
+  directories:
+    :node_modules
 
 install: 
  - npm install
@@ -10,7 +13,7 @@ services:
  - postgresql
 
 before_script:
- - psql -c "CREATE DATABASE testDatabase;" -U postgres
+ - psql -c "CREATE DATABASE test_db;" -U postgres
 
 script:
   - npm test
