--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,22 @@
-language:      node_js
-git:
-  depth:       3
+language: node_js
+
 node_js:
-  - "10"
-install:       npm install
+  - node
 cache:
   directories:
-    - node_modules
+    :node_modules
+
+install: 
+ - npm install
+
+services:
+ - postgresql
+
+before_script:
+ - psql -c "CREATE DATABASE test_db;" -U postgres
+
 script:
   - npm test
+  
 after_success:
 - npm run coveralls
-
-notifications:
-email: false
