--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "NODE_ENV=test nyc mocha --require @babel/register ./server/tests/*.js  --timeout 150000 --exit",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls ",
     "build": "babel server -d build",
-    "lint": "npx eslint"
+    "lint": "npx eslint",
+    "drop": "babel-node server/db/dropTables.js dropTables"
   },
   "engines": {
     "node": "10.16.3",
@@ -36,6 +37,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "make-runnable": "^1.3.6",
     "nodemon": "^1.19.1",
     "pg": "^7.12.1",
     "swagger-ui": "^3.23.6",
