--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "coveralls": "^3.0.6",
+    "cross-env": "^5.2.1",
     "eslint": "^6.2.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "mocha": "^6.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^14.1.1",
-    "cross-env": "^5.2.1"
+    "nyc": "^14.1.1"
   }
 }
